--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "main": "index.js",
   "scripts": {
     "build": "webpack --mode production",
-    "start": "webpack-dev-server --open --debug --mode development",
-    "precommit": "NODE_ENV=production lint-staged"
+    "devstart": "webpack-dev-server --open --debug --mode development",
+    "precommit": "NODE_ENV=production lint-staged",
+    "start": "node server"
   },
   "keywords": [],
   "author": "",
@@ -14,6 +15,8 @@
   "dependencies": {
     "axios": "^0.18.0",
     "css-loader": "^2.1.0",
+    "dotenv": "^7.0.0",
+    "express": "4.16.4",
     "glamor": "2.20.40",
     "google-maps-react": "^2.0.2",
     "jwt-decode": "^2.2.0",
