--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@babel/polyfill": "7.4.3",
     "axios": "^0.18.0",
     "css-loader": "^2.1.0",
+    "dayjs": "^1.8.13",
     "dotenv": "^7.0.0",
     "express": "4.16.4",
     "glamor": "2.20.40",
@@ -32,11 +33,11 @@
     "react-service-worker": "^0.1.1",
     "react-toastify": "^5.0.0-rc.3",
     "redux": "^4.0.1",
+    "redux-devtools-extension": "2.13.8",
+    "redux-logger": "3.0.6",
     "redux-thunk": "^2.3.0",
     "style-loader": "^0.23.1",
-    "superagent": "^5.0.2",
-    "redux-devtools-extension": "2.13.8",
-    "redux-logger": "3.0.6"
+    "superagent": "^5.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.3.3",
