--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "build": "webpack --mode production",
-    "devstart": "webpack-dev-server --open --debug --mode development",
+    "devstart": "webpack-dev-server --open --debug --mode development --hot",
     "start": "node server",
     "test": "jest --config jest.config.js"
   },
@@ -15,10 +15,13 @@
   "dependencies": {
     "@babel/polyfill": "7.4.3",
     "axios": "^0.18.0",
+    "circular-dependency-plugin": "^5.0.2",
+    "clean-webpack-plugin": "^2.0.1",
     "css-loader": "^2.1.0",
     "dayjs": "^1.8.13",
     "dotenv": "^7.0.0",
     "express": "4.16.4",
+    "extract-text-webpack-plugin": "^3.0.2",
     "glamor": "2.20.40",
     "google-maps-react": "^2.0.2",
     "jwt-decode": "^2.2.0",
