--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "build": "webpack --mode production",
-    "devstart": "webpack-dev-server --open --debug --mode development --hot",
+    "devstart": "webpack-dev-server --open --debug --mode development",
     "start": "node server",
     "test": "jest --config jest.config.js"
   },
@@ -20,12 +20,16 @@
     "css-loader": "^2.1.0",
     "dayjs": "^1.8.13",
     "dotenv": "^7.0.0",
+    "dotenv-webpack": "^1.7.0",
     "express": "4.16.4",
     "extract-text-webpack-plugin": "^3.0.2",
     "glamor": "2.20.40",
     "google-maps-react": "^2.0.2",
+    "imagemin-webpack-plugin": "^2.4.2",
     "jwt-decode": "^2.2.0",
+    "mini-css-extract-plugin": "0.6.0",
     "node-sass": "^4.12.0",
+    "optimize-css-assets-webpack-plugin": "^5.0.1",
     "prop-types": "^15.7.2",
     "react": "^16.8.2",
     "react-dom": "^16.8.2",
@@ -40,7 +44,8 @@
     "redux-logger": "3.0.6",
     "redux-thunk": "^2.3.0",
     "style-loader": "^0.23.1",
-    "superagent": "^5.0.2"
+    "superagent": "^5.0.2",
+    "terser-webpack-plugin": "^1.2.3"
   },
   "devDependencies": {
     "@babel/core": "^7.3.3",
