--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react": "^16.8.2",
     "react-dom": "^16.8.2",
     "react-dropzone": "^10.1.0",
+    "react-hamburger": "^0.7.2",
     "react-redux": "^6.0.1",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
@@ -76,7 +77,7 @@
     "lint-staged": "^8.1.5",
     "prettier": "^1.16.4",
     "pretty-quick": "^1.10.0",
-    "redux-mock-store": "1.5.3",
+    "redux-mock-store": "^1.5.3",
     "sass-loader": "^7.1.0",
     "url-loader": "^1.1.2",
     "webpack": "^4.29.5",
